--- a/style/style.css
+++ b/style/style.css
@@ -1,14 +1,17 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 a {
     text-decoration: none;
 }
+
 ul {
     list-style: none;
 }
+
 .container {
     max-width: 1140px;
     width: 100%;
@@ -23,7 +26,31 @@ ul {
 
 /* nav */
 /* header content */
+.header__content {
+    background: url(../img/header\ banner.png) no-repeat center /cover;
+    height: 565px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
 
+.header__content-title {
+    font-size: 50px;
+    line-height: 59px;
+    color: #FFFFFF;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.header__content-text{
+    color: #FFFFFF;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    padding: 15px;
+}
 
 
 
